tests/trybuild/fail/duplicate_source.stderr
error: duplicate `#[source]` or `#[stack_error]` attribute
  --> tests/trybuild/fail/duplicate_source.rs:12:5
   |
12 | /     #[source]
13 | |     second: std::io::Error,
   | |__________________________^
